# gpu-mwdg2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  concat.py  help.txt  include.cmake  log.txt  monai.par  options.cmake
cases/: monai.txt
cases/1d-dam-break/: inputs.par  simulate.py
cases/25-blocks/: 25-blocks.par  Vxy_C1_10s.txt  Vxy_C1_4s.txt  Vxy_C1_5s.txt  Vxy_C1_6s.txt  WLxy_C1_10s.txt  WLxy_C1_4s.txt  WLxy_C1_5s.txt  WLxy_C1_6s.txt  generate-raster-files.py  plot-experimental-data.py  raster.py  simulate.py
cases/2d-dam-break/: inputs.par  simulate.py
cases/circular-2d-dam-break/: inputs.par  reference.txt  simulate.py
cases/cockermouth-1m/: cockermouth-1m.bci  cockermouth-1m.bdy  cockermouth-1m.par  cockermouth-1m.stage
cases/conical-island/: conical-island.par  conical-island.stage  experimental.xls  generate-dem.py  generate-raster-files.py  raster.py  simulate.py  stage.py
cases/ea5-10m/: ea5-10m.bci  ea5-10m.par  ea5-10m.stage  ea5.bdy  ea5.stage
cases/ea5-50m/: ea5-50m.bci  ea5-50m.par  ea5.bdy  ea5.stage
cases/ea8-2m/: ea8-2m.bci  ea8-2m.bdy  ea8-2m.par  ea8-2m.stage
cases/hilo/: dem.py  hilo.bci  hilo.bdy  hilo.par  hilo.stage  inflow.py  postprocess.py  preprocess.py  simulate.py
cases/malpasset/: .~lock.bed-data.txt#  generate-dem.py  generate-raster-files.py  malpasset.par  raster.py  simulate.py
cases/monai/: clean-files.sh  experimental.txt  functional-test.par  generate-unit-test-data.py  inflow.py  monai.bci  monai.bdy  monai.par  monai.stage  raster.py  run-functional-tests.py  run-simulations.py  stage.py  (+6 more)
plot/: inputs.par  plot_2D_solution.py  plot_c_prop.py  run_tests.py  threshold-topo-details.py
python/: plot_z_order_data.py  run_tests.py
source/: CMakeLists.txt  MAIN.cu  inputs.par  main.cu  run_simulation.cu  run_simulation.cuh
src/: MAIN.cu
test/: plot_stage.py  stage.py  test.py  tests.txt  zorder.py
utilities/: plot.py  test.py  tests.txt  zorder.py
(+979 files in other folders)
